parser/cool.output
Terminals unused in grammar

   ERROR


State 59 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 127 conflicts: 9 shift/reduce
State 141 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: feature_list feature
    8             | error ';'
    9             | /* empty */

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' exprs '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN exprs ';'

   13 formal_list: formal_list ',' formal
   14            | /* empty */

   15 formal: OBJECTID ':' TYPEID

   16 exprs: OBJECTID ASSIGN exprs
   17      | exprs '.' OBJECTID '(' parameter_list ')'
   18      | OBJECTID '(' parameter_list ')'
   19      | exprs '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   20      | IF exprs THEN exprs ELSE exprs FI
   21      | WHILE exprs LOOP exprs POOL
   22      | '{' exprs_block_list '}'
   23      | LET let_exprs
   24      | CASE exprs OF case_s ESAC
   25      | NEW TYPEID
   26      | NOT exprs
   27      | exprs '+' exprs
   28      | exprs '-' exprs
   29      | exprs '*' exprs
   30      | exprs '/' exprs
   31      | ISVOID exprs
   32      | exprs '<' exprs
   33      | exprs '=' exprs
   34      | exprs LE exprs
   35      | '~' exprs
   36      | '(' exprs ')'
   37      | OBJECTID
   38      | STR_CONST
   39      | INT_CONST
   40      | BOOL_CONST

   41 parameter_list: exprs parameter
   42               | /* empty */

   43 parameter: parameter ',' exprs
   44          | /* empty */

   45 exprs_block_list: exprs ';'
   46                 | exprs_block_list exprs ';'
   47                 | error ','

   48 let_exprs: OBJECTID ':' TYPEID IN exprs
   49          | OBJECTID ':' TYPEID ASSIGN exprs IN exprs
   50          | OBJECTID ':' TYPEID ASSIGN exprs ',' let_exprs
   51          | OBJECTID ':' TYPEID ',' let_exprs
   52          | error ','

   53 case_s: OBJECTID ':' TYPEID DARROW exprs ';'
   54       | case_s OBJECTID ':' TYPEID DARROW exprs ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 17 18 19 36
')' (41) 10 17 18 19 36
'*' (42) 29
'+' (43) 27
',' (44) 13 43 47 50 51 52
'-' (45) 28
'.' (46) 17 19
'/' (47) 30
':' (58) 10 11 12 15 48 49 50 51 53 54
';' (59) 4 5 6 8 10 11 12 45 46 53 54
'<' (60) 32
'=' (61) 33
'@' (64) 19
'{' (123) 5 6 10 22
'}' (125) 5 6 10 22
'~' (126) 35
error (256) 4 8 47 52
CLASS (258) 5 6
ELSE (259) 20
FI (260) 20
IF (261) 20
IN (262) 48 49
INHERITS (263) 6
LET (264) 23
LOOP (265) 21
POOL (266) 21
THEN (267) 20
WHILE (268) 21
CASE (269) 24
ESAC (270) 24
OF (271) 24
DARROW (272) 53 54
NEW (273) 25
ISVOID (274) 31
STR_CONST (275) 38
INT_CONST (276) 39
BOOL_CONST (277) 40
TYPEID (278) 5 6 10 11 12 15 19 25 48 49 50 51 53 54
OBJECTID (279) 10 11 12 15 16 17 18 19 37 48 49 50 51 53 54
ASSIGN (280) 12 16 49 50
NOT (281) 26
LE (282) 34
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4, on right: 1 3
class (48)
    on left: 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9, on right: 5 6 7
feature (50)
    on left: 10 11 12, on right: 7
formal_list (51)
    on left: 13 14, on right: 10 13
formal (52)
    on left: 15, on right: 13
exprs (53)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 39 40, on right: 10 12 16 17 19 20 21 24 26 27 28
    29 30 31 32 33 34 35 36 41 43 45 46 48 49 50 53 54
parameter_list (54)
    on left: 41 42, on right: 17 18 19
parameter (55)
    on left: 43 44, on right: 41 43
exprs_block_list (56)
    on left: 45 46 47, on right: 22 46
let_exprs (57)
    on left: 48 49 50 51 52, on right: 23 50 51
case_s (58)
    on left: 53 54, on right: 24 54


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    4 class_list: error . ';'

    ';'  shift, and go to state 6


state 2

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


state 7

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


state 11

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 9 (feature_list)
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 14


state 12

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


state 13

    8 feature_list: error . ';'

    ';'  shift, and go to state 16


state 14

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


state 15

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 9 (feature_list)
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 20


state 16

    8 feature_list: error ';' .

    $default  reduce using rule 8 (feature_list)


state 17

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' exprs '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN exprs ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


state 18

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


state 19

    7 feature_list: feature_list feature .

    $default  reduce using rule 7 (feature_list)


state 20

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 24

    feature  go to state 19


state 21

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' exprs '}' ';'

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 25


state 22

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN exprs ';'

    TYPEID  shift, and go to state 26


state 23

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 24

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 27


state 25

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' exprs '}' ';'
   13 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 28
    ','  shift, and go to state 29


state 26

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN exprs ';'

    ASSIGN  shift, and go to state 30
    ';'     shift, and go to state 31


state 27

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 28

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' exprs '}' ';'

    ':'  shift, and go to state 32


state 29

   13 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 33

    formal  go to state 34


state 30

   12 feature: OBJECTID ':' TYPEID ASSIGN . exprs ';'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 49


state 31

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


state 32

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' exprs '}' ';'

    TYPEID  shift, and go to state 50


state 33

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 51


state 34

   13 formal_list: formal_list ',' formal .

    $default  reduce using rule 13 (formal_list)


state 35

   20 exprs: IF . exprs THEN exprs ELSE exprs FI

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 52


state 36

   23 exprs: LET . let_exprs

    error     shift, and go to state 53
    OBJECTID  shift, and go to state 54

    let_exprs  go to state 55


state 37

   21 exprs: WHILE . exprs LOOP exprs POOL

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 56


state 38

   24 exprs: CASE . exprs OF case_s ESAC

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 57


state 39

   25 exprs: NEW . TYPEID

    TYPEID  shift, and go to state 58


state 40

   31 exprs: ISVOID . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 59


state 41

   38 exprs: STR_CONST .

    $default  reduce using rule 38 (exprs)


state 42

   39 exprs: INT_CONST .

    $default  reduce using rule 39 (exprs)


state 43

   40 exprs: BOOL_CONST .

    $default  reduce using rule 40 (exprs)


state 44

   16 exprs: OBJECTID . ASSIGN exprs
   18      | OBJECTID . '(' parameter_list ')'
   37      | OBJECTID .

    ASSIGN  shift, and go to state 60
    '('     shift, and go to state 61

    $default  reduce using rule 37 (exprs)


state 45

   26 exprs: NOT . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 62


state 46

   35 exprs: '~' . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 63


state 47

   22 exprs: '{' . exprs_block_list '}'

    error       shift, and go to state 64
    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs             go to state 65
    exprs_block_list  go to state 66


state 48

   36 exprs: '(' . exprs ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 67


state 49

   12 feature: OBJECTID ':' TYPEID ASSIGN exprs . ';'
   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 76
    '@'  shift, and go to state 77


state 50

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' exprs '}' ';'

    '{'  shift, and go to state 78


state 51

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 79


state 52

   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   20      | IF exprs . THEN exprs ELSE exprs FI
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs

    THEN  shift, and go to state 80
    LE    shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70
    '+'   shift, and go to state 71
    '-'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '.'   shift, and go to state 75
    '@'   shift, and go to state 77


state 53

   52 let_exprs: error . ','

    ','  shift, and go to state 81


state 54

   48 let_exprs: OBJECTID . ':' TYPEID IN exprs
   49          | OBJECTID . ':' TYPEID ASSIGN exprs IN exprs
   50          | OBJECTID . ':' TYPEID ASSIGN exprs ',' let_exprs
   51          | OBJECTID . ':' TYPEID ',' let_exprs

    ':'  shift, and go to state 82


state 55

   23 exprs: LET let_exprs .

    $default  reduce using rule 23 (exprs)


state 56

   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   21      | WHILE exprs . LOOP exprs POOL
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs

    LOOP  shift, and go to state 83
    LE    shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70
    '+'   shift, and go to state 71
    '-'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '.'   shift, and go to state 75
    '@'   shift, and go to state 77


state 57

   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   24      | CASE exprs . OF case_s ESAC
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs

    OF   shift, and go to state 84
    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '.'  shift, and go to state 75
    '@'  shift, and go to state 77


state 58

   25 exprs: NEW TYPEID .

    $default  reduce using rule 25 (exprs)


state 59

   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   31      | ISVOID exprs .
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs

    '.'  shift, and go to state 75
    '@'  shift, and go to state 77

    '@'       [reduce using rule 31 (exprs)]
    $default  reduce using rule 31 (exprs)


state 60

   16 exprs: OBJECTID ASSIGN . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 85


state 61

   18 exprs: OBJECTID '(' . parameter_list ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    $default  reduce using rule 42 (parameter_list)

    exprs           go to state 86
    parameter_list  go to state 87


state 62

   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   26      | NOT exprs .
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '.'  shift, and go to state 75
    '@'  shift, and go to state 77

    '@'       [reduce using rule 26 (exprs)]
    $default  reduce using rule 26 (exprs)


state 63

   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs
   35      | '~' exprs .

    '.'  shift, and go to state 75
    '@'  shift, and go to state 77

    '@'       [reduce using rule 35 (exprs)]
    $default  reduce using rule 35 (exprs)


state 64

   47 exprs_block_list: error . ','

    ','  shift, and go to state 88


state 65

   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs
   45 exprs_block_list: exprs . ';'

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 89
    '@'  shift, and go to state 77


state 66

   22 exprs: '{' exprs_block_list . '}'
   46 exprs_block_list: exprs_block_list . exprs ';'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '}'         shift, and go to state 90
    '('         shift, and go to state 48

    exprs  go to state 91


state 67

   17 exprs: exprs . '.' OBJECTID '(' parameter_list ')'
   19      | exprs . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   27      | exprs . '+' exprs
   28      | exprs . '-' exprs
   29      | exprs . '*' exprs
   30      | exprs . '/' exprs
   32      | exprs . '<' exprs
   33      | exprs . '=' exprs
   34      | exprs . LE exprs
   36      | '(' exprs . ')'

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '.'  shift, and go to state 75
    ')'  shift, and go to state 92
    '@'  shift, and go to state 77


state 68

   34 exprs: exprs LE . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 93


state 69

   32 exprs: exprs '<' . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 94


state 70

   33 exprs: exprs '=' . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 95


state 71

   27 exprs: exprs '+' . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 96


state 72

   28 exprs: exprs '-' . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 97


state 73

   29 exprs: exprs '*' . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 98


state 74

   30 exprs: exprs '/' . exprs

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 99


state 75

   17 exprs: exprs '.' . OBJECTID '(' parameter_list ')'

    OBJECTID  shift, and go to state 100


state 76

   12 feature: OBJECTID ':' TYPEID ASSIGN exprs ';' .

    $default  reduce using rule 12 (feature)


state 77

   19 exprs: exprs '@' . TYPEID '.' OBJECTID '(' parameter_list ')'

    TYPEID  shift, and go to state 101


state 78

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . exprs '}' ';'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 102


state 79

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


state 80

   20 exprs: IF exprs THEN . exprs ELSE exprs FI

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 103


state 81

   52 let_exprs: error ',' .

    $default  reduce using rule 52 (let_exprs)


state 82

   48 let_exprs: OBJECTID ':' . TYPEID IN exprs
   49          | OBJECTID ':' . TYPEID ASSIGN exprs IN exprs
   50          | OBJECTID ':' . TYPEID ASSIGN exprs ',' let_exprs
   51          | OBJECTID ':' . TYPEID ',' let_exprs

    TYPEID  shift, and go to state 104


state 83

   21 exprs: WHILE exprs LOOP . exprs POOL

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    exprs  go to state 105


state 84

   24 exprs: CASE exprs OF . case_s ESAC

    OBJECTID  shift, and go to state 106

    case_s  go to state 107


state 85
